# pytest-frozen-uuids

./: .gitignore  .yamllint  LICENSE  Makefile  README.md  pyproject.toml  pytest_frozen_uuids.py  requirements.in  requirements.txt  setup.cfg  tox.ini
.github/workflows/: main.yaml
pytest_frozen_uuids/: __main__.py  utils.py
scripts/: build.sh  cleanup.sh  install.sh  lint.sh  setup.sh  unit-test.sh  upload-test.sh
src/: config.py  generators.py
tests/: test_freeze_uuids.py
tests/unit/: test_freeze_uuids.py
