[metadata]
name = pytest-frozen-uuids
version = 0.3.1
description = Deterministically frozen UUID's for your tests
long_description = file:README.md
long_description_content_type = text/markdown
author = Simon Wahlgren
author_email = simon.wahlgren@gmail.com
license = MIT
url = https://github.com/simonwahlgren/pytest-frozen-uuids
classifiers =
    Framework :: Pytest
    Topic :: Software Development :: Testing
    Programming Language :: Python :: 3

[options]
package_dir =
    = .
packages = find_namespace:
install_requires =
    pytest>=3.0

[options.packages.find]
where = .
exclude = tests

[options.entry_points]
pytest11 =
    frozen_uuids = pytest_frozen_uuids

[flake8]
max-line-length = 100
extended-ignore = W504
exclude =
    .git,
    .venv,
    .eggs,
    .tox,
    __pycache__

[coverage:run]
branch = True
source = .
omit =
    .venv,
    .eggs,
    .tox,
    __pycache__,
    tests/*,
    setup.py,

[tool:pytest]
testpaths = tests
norecursedirs = .venv .git .eggs
addopts = -v

[mypy]
ignore_missing_imports = True
show_error_context = True
files = pytest_frozen_uuids.py,src

[tool:isort]
profile = black
line_length = 100
known_tests = tests
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER,TESTS
