[metadata]
name = pytest-frozen-uuids
version = 0.3.3
description = Deterministically frozen UUID's for your tests
long_description = file:README.md
long_description_content_type = text/markdown
author = Simon Wahlgren
author_email = simon.wahlgren@gmail.com
license = MIT
url = https://github.com/simonwahlgren/pytest-frozen-uuids
classifiers =
    Framework :: Pytest
    Topic :: Software Development :: Testing
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6
packages = find_namespace:
package_dir =
    = .
install_requires =
    pytest>=3.0

[options.packages.find]
where = .
include = pytest_frozen_uuids

[options.entry_points]
pytest11 =
    frozen_uuids = pytest_frozen_uuids.__main__

[flake8]
max-line-length = 100
extended-ignore = W504
exclude = .git,.venv,.eggs,.tox,__pycache__

[coverage:run]
branch = True
source = pytest_frozen_uuids

[tool:pytest]
testpaths = tests
norecursedirs = .venv .git .eggs
addopts = -v

[mypy]
ignore_missing_imports = True
show_error_context = True
files = pytest_frozen_uuids

[tool:isort]
profile = black
line_length = 100
known_tests = tests
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER,TESTS
